Update workflow to keep Streamlit awake every 4 hours

--- a/.github/workflows/keep-streamlit-awake.yml
+++ b/.github/workflows/keep-streamlit-awake.yml
@@ -1,88 +1,29 @@
 name: Keep Streamlit Awake
 
-# Trigger workflow every 10 minutes and manually
 on:
   schedule:
-    - cron: '*/10 * * * *'   # every 10 minutes
-  workflow_dispatch: {}       # allows manual trigger
+    # every 4 hours
+    - cron: "0 */4 * * *"
+  workflow_dispatch:
 
 jobs:
-  keep-awake:
+  wake:
     runs-on: ubuntu-latest
-    timeout-minutes: 15       # workflow timeout
-
     steps:
-      # Step 2a: Checkout repo (needed for actions)
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      # Step 2b: Setup Node.js
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          node-version: '20'
+          python-version: "3.11"
 
-      # Step 2c: Install Puppeteer
-      - name: Install Puppeteer
+      - name: Install deps
         run: |
-          # create package.json if missing
-          if [ ! -f package.json ]; then
-            npm init -y
-          fi
-          npm i puppeteer@21 --no-audit --no-fund
+          python -m pip install --upgrade pip
+          pip install selenium webdriver-manager
 
-      # Step 2d: Visit your Streamlit app
-      - name: Run headless visit
+      - name: Run wake script
         env:
-          APP_URL: "https://q-adocuments.streamlit.app"   # your app URL
-          WAIT_MS: "15000"   # 15 seconds wait
-          NAV_TIMEOUT_MS: "90000"  # 90 seconds nav timeout
+          STREAMLIT_APP_URL: "https://ai-support-agent1.streamlit.app/"
         run: |
-          node <<'NODE'
-          const puppeteer = require('puppeteer');
-          const url = process.env.APP_URL;
-          const waitMs = parseInt(process.env.WAIT_MS || '15000', 10);
-          const navTimeout = parseInt(process.env.NAV_TIMEOUT_MS || '90000', 10);
-
-          (async () => {
-            console.log('Visiting', url);
-            const browser = await puppeteer.launch({
-              args: ['--no-sandbox', '--disable-setuid-sandbox', '--disable-dev-shm-usage']
-            });
-            const page = await browser.newPage();
-            page.setDefaultNavigationTimeout(navTimeout);
-
-            try {
-              await page.goto(url, { waitUntil: 'networkidle2' });
-              console.log('Page loaded, waiting', waitMs, 'ms...');
-              await page.waitForTimeout(waitMs);
-
-              // Optional: click any "Wake" / "Open" button
-              const selectors = [
-                'button:has-text("Wake")',
-                'button:has-text("Wake app")',
-                'button:has-text("Open")',
-                'button:has-text("Continue")'
-              ];
-
-              for (const sel of selectors) {
-                try {
-                  const el = await page.$(sel);
-                  if (el) {
-                    console.log('Clicking selector:', sel);
-                    await el.click();
-                    await page.waitForTimeout(3000);
-                    break;
-                  }
-                } catch {}
-              }
-
-              console.log('Visit complete.');
-            } catch (err) {
-              console.error('Visit failed:', err && err.message ? err.message : err);
-              process.exitCode = 1;
-            } finally {
-              await browser.close();
-            }
-          })();
-          NODE
+          python .github/scripts/wake_streamlit.py
